tests/rosetta/transpiler/Clojure/4-rings-or-4-squares-puzzle.error
run error: exit status 1
WARNING: count already refers to: #'clojure.core/count in namespace: main, being replaced by: #'main/count
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/4-rings-or-4-squares-puzzle.clj:16:285).
Unable to resolve symbol: f in this context

Full report at:
/tmp/clojure-4311026425134172466.edn
